2006-04-18  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs.py (BackRefList.create_buttons): Allow an
	additional argument to keep the caller happy.

2006-04-18  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: removal of inversion
	* src/GenericFilter.py: Interface changes for filtering
	* src/Editors/__init__.py: added EditChildRef
	* src/Editors/Makefile.am: added EditChildRef
	* src/Editors/_EditChildRef.py: added
	* src/Editors/_EditFamily.py: add child reference editor
	* src/DisplayTabs.py: add optional properties button
	* src/glade/gramps.glade: add child reference editor
	* src/plugins/Desbrowser.py: bring up to speed with ManagedWindow
	* src/GrampsWidgets.py: fix the type return value 

2006-04-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py: handle the dirty flag for updates
	* src/DataViews/_PersonView.py: goto active person properly
	* src/SelectObject.py: scale thumbnails to 1/2 size
	* src/ListModel.py: reduce size of thumbnails
	* src/GrampsDb/_ReadGedcom.py: set author properly for GEDCOM name
	on default source

2006-04-16  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/plugins/DescendReport.py: Don't sort children (Bug #1453010)

2006-04-15  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: provide an event description if one does 
	not exist.

2006-04-15  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Adapt to 
	ChildRefType.

2006-04-15  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: handle child type callback
	* src/Editors/_EditFamily.py: handle child type callback

2006-04-14  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs.py (edit_button_clicked): Proceed only if
	selection exists.

2006-04-14  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: handle ChildRefType
	* src/GrampsDb/_ConstXML.py: remove unused map
